Trigger PDF download in captive portal mode instead of using PDF viewer https://bugs.webkit.org/show_bug.cgi?id=237245 rdar://problem/89525531

Reviewed by Chris Dumez.

Source/WebKit:

This is a stopgap solution since PDF.js needs more cycles to polish.

Added API test WKDownload.CaptivePortalPDF.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForResponseShared):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):

Tools:

Add API test for captive portal pdf behavior.

* TestWebKitAPI/Tests/WebKitCocoa/Download.mm:
(tempPDFThatDoesNotExist):



Canonical link: https://commits.webkit.org/248603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291491 268f45cc-cd09-0410-ab3c-d52691b4dbfc